Further alignment tweaks (to ensure it looks well on android screens)

--- a/style/popup.less
+++ b/style/popup.less
@@ -134,8 +134,9 @@
 
 		&-text {
 			position: absolute;
-			bottom: 18px;
-			width: 280px;
+			bottom: 14px;
+			left: -8px;
+			width: 292px;
 			text-align: center;
 			font-family: 'Lato', 'Linux Libertine', 'Georgia', 'Times', serif;
 			font-size: 12px;
@@ -159,7 +160,7 @@
 
 			&-refresh {
 				position: absolute;
-				bottom: -15px;
+				bottom: -20px;
 				left: 105px;
 				font-family: 'Lato', 'Linux Libertine', 'Georgia', 'Times', serif;
 				font-size: 16px;
